# 2048-CPP

./: CMakeLists.txt  GameMechanics.cpp  Graphics.cpp  Tile.cpp  main.cpp
Libraries/include/GL/: glut.h
Libraries/include/GLFW/: glfw3.h  glfw3native.h
Libraries/lib/MacOS/FreeType/: libfreetype.6.dylib  libfreetype.dylib
Libraries/lib/MacOS/glfw/: libglfw.3.dylib
include/: GameMechanics.h  Graphics.h  Tile.h  main.h
src/: CartesianProduct.cpp  GameDrawing.cpp  GameLogic.cpp  GameRendering.cpp  GameState.cpp  GameStateBitBoard.cpp  Graphics.cpp  InputControl.cpp  TextRendering.cpp  main.cpp
src/Controllers/: Keyboard.cpp
src/include/: CartesianProduct.h  GameDrawing.h  GameLogic.h  GameRendering.h  GameState.h  GameStateBitBoard.h  Graphics.h  InputControl.h  TextRendering.h  main.h
src/include/Controllers/: Keyboard.h
